# Moodle_RAG

./: .gitignore  README.md  cookies.json  kernel-metadata.json  pyproject.toml
data/moodle_docs/: errors.jsonl
data/moodle_docs/chunks_md/403__en__Upgrade_overview/: chunk_0000.md  chunk_0001.md
data/moodle_docs/clean_markdown/: 403__en__Activity_completion_settings.md  403__en__Survey_activity.md
scripts/: bootstrap_storage_state.py  chunk_clean_markdown.py  moodle_docs_crawler.py  prepare_markdown_corpus.py
scripts/FastAPI/: main.py  rag_service.py
scripts/Notebooks/: compare_embeddings.ipynb  create_chunks.ipynb  create_vectorDB.ipynb  rag.ipynb  rag_pplx.ipynb  vectordb_with_context.ipynb
scripts/Notebooks/chroma_db_pplx/54900945-efc1-402e-bf2d-b6540c9d0f56/: index_metadata.pickle
scripts/pplx_embed/: __init__.py  pplx_embed.py
