[project]
name = "Moodle_RAG_with_Crowler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromium>=0.0.0",
    "crawl4ai>=0.8.0",
    "deep-translator>=1.11.4",
    "python-dotenv>=1.2.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langdetect>=1.0.9",
    "mlx-lm>=0.30.7",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
]
